k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prueba-tecnica-apap
  labels:
    app.kubernetes.io/name: prueba-tecnica-apap
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prueba-tecnica-apap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prueba-tecnica-apap
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: backend
    spec:
      # ── Seguridad a nivel de Pod ──────────────────
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000

      containers:
        - name: prueba-tecnica-apap
          image: yoderickmejia/prueba-tecnica-apap:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          # ── Variables de entorno ──────────────────
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          # ── Liveness Probe ────────────────────────
          # Reinicia el pod si la app deja de responder
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          # ── Readiness Probe ───────────────────────
          # Quita el pod del balanceo si no está listo
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          # ── Seguridad a nivel de contenedor ───────
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
