k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prueba-tecnica-apap
  labels:
    app.kubernetes.io/name: prueba-tecnica-apap
    app.kubernetes.io/component: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "app.example.com"
      secretName: prueba-tecnica-apap-tls
  rules:
    - host: "app.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prueba-tecnica-apap
                port:
                  name: http
